--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,23 +32,29 @@
     </div>
     <div class="col-md-6 sm-3">
       <div *ngIf="weather" class="cardContent card card-body mt-2">
-        <div class="cardContent">{{ weather.main.temp }}C°</div>
-        <p>Temperature:{{ weather.main.temp }}C°</p>
+        <h3>{{ weather.name}}</h3>
+        <h4>{{ weather.main.temp }}C°</h4>
+        <img
+          src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png" class="" style="width: 200px;"
+        />
+        <p>{{ weather.weather[0].description }}</p>
+      </div>
+    </div>
+    <div class="col-md-6 sm-3">
+      <div *ngIf="weather" class="cardContent card card-body mt-2">
+        
+        
+        <h4>Details</h4>
+        <br>
         <p>Min:{{ weather.main.temp_min }}°C</p>
         <p>Máx:{{ weather.main.temp_max }}°C</p>
         <p>Longitude:{{ weather.coord.lon }}</p>
         <p>Latitud:{{ weather.coord.lat }}</p>
         <p>Humidity:{{ weather.main.humidity }}</p>
         <p>Pressure:{{ weather.main.pressure }}</p>
-        <p>Description:{{ weather.weather[0].description }}</p>
+        
       </div>
     </div>
-    <div class="col-md-6 sm-3">
-      <div *ngIf="weather" class="cardContent card card-body mt-2">
-        <img
-          src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png" class="mx-auto" style="width: 300px;"
-        />
-      </div>
-    </div>
+    
   </div>
 </div>
